# WebRTC-Lobby

./: README.md
Server/: Cargo.toml
Server/src/: error.rs  lobby.rs  log.rs  main.rs  message.rs
Server/src/server/: lobby.rs  mod.rs
Server/src/server/database/: mod.rs  ram_database.rs
Server/src/server/random_words/: english_words.rs  mod.rs
User/: .gitignore  package.json  pnpm-lock.yaml  tsconfig.json
User/src/: browser-zlib.ts  error.ts  index.ts  node-zlib.ts  rtc-link.ts  serializer.ts  signaling.ts  wrtc.d.ts
